# NeVK

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  cpplint.yml
cubemisc/: monocube.mtl
include/modelloader/: modelloader.h
include/render/: paramblock.h  render.h  renderpass.h  vertex.h
include/scene/: camera.h  scene.h
misc/models/cube/: cube.mtl
misc/models/teapot/: teapot.mtl
misc/models/test/: test.mtl
misc/models/tree/: tree.mtl
misc/objects/pine/: pine.mtl
shaders/: simple.hlsl  simpleparams.h
src/app/: app.cpp  app.h
src/engine/: engine.cpp  engine.h
src/engine/commands/: commands.cpp  commands.h
src/engine/core/: core.cpp  core.h  validation.h
src/engine/core/commands/: commands.cpp  commands.h
src/engine/core/resources/: resources.cpp  resources.h
src/engine/render/: commands.cpp  pass.cpp  pass.h  render.cpp  render.h
src/engine/render/commands/: commands.h
src/engine/render/frames/: frames.cpp  frames.h
src/engine/render/pass/: geometry.cpp  geometry.h  pass.cpp  pass.h
src/engine/render/passes/: geometry.cpp  geometry.h  pass.cpp  pass.h
src/engine/render/passes/graphics/: fullscreen.cpp  fullscreen.h  geometry.cpp  geometry.h  graphics.cpp  graphics.h  gui.cpp  gui.h
src/engine/render/passes/graphics/postprocessing/: fullscreen.cpp  fullscreen.h  gui.cpp  gui.h
src/engine/render/shaders/: shaders.cpp  shaders.h
src/engine/resources/: resources.cpp  resources.h
src/engine/resources/commands/: commands.cpp
src/engine/resources/models/: models.cpp  models.h
src/engine/resources/shaders/: shaders.cpp  shaders.h
src/engine/resources/textures/: textures.cpp  textures.h
src/engine/scene/: camera.cpp  camera.h  object.cpp  object.h  scene.cpp  scene.h
src/engine/scene/objects/: camera.cpp  object.h
src/engine/scene/resources/: models.cpp  models.h  textures.cpp  textures.h
src/modelloader/: modelloader.cpp
src/render/: render.cpp  renderpass.cpp
src/scene/: camera.cpp  scene.cpp
src/shaders/: fullscreen.hlsl  geometry.hlsl  taa.hlsl
src/ui/: ui.cpp
src/window/: window.h
tests/modelloader/: test_model.cpp
tests/scene/: tests_scene.cpp
tests/ui/: tests_ui.cpp
